@@ -1,3 +1,7 @@
+2003-05-25 Araki Ken <arakiken@users.sf.net>
+
+	* Cursor position could be illegal after a window resized. Fixed.
+
 2003-05-24 Tomohiro KUBOTA <kubota@debian.org>
 
 	* Removed description on -%/--class command option from manpage.
